--- a/ui/navbar.templ
+++ b/ui/navbar.templ
@@ -1,6 +1,9 @@
 package ui
 
-import "github.com/troygilman/gong"
+import (
+	"github.com/troygilman/gong"
+	"github.com/troygilman/gong/link"
+)
 
 type NavbarComponent struct {
 	SearchComponent gong.Component
@@ -15,7 +18,7 @@ templ (c NavbarComponent) View() {
 		</div>
 		<div class="flex gap-4">
 			@c.SearchComponent
-			@gong.NewLink("/docs").WithAttrs(templ.Attributes{"class": "btn btn-icon-scale btn-ghost"}) {
+			@link.New("/docs").WithAttrs(templ.Attributes{"class": "btn btn-icon-scale btn-ghost"}) {
 				Docs
 			}
 			@themeController()
