--- a/ui/search.templ
+++ b/ui/search.templ
@@ -35,11 +35,11 @@ templ (c SearchComponent) View() {
 				@searchIcon("size-4 fill-none stroke-current/50")
 				<input
 					id="search-input"
-					type="text"
+					type="search"
 					name="q"
 					placeholder="Search"
 					autocomplete="off"
-					class="w-14 group-focus-within:w-48 transition-all"
+					class="w-18 lg:w-14 group-focus-within:w-48 transition-all"
 				/>
 			</label>
 			@target.New() {
@@ -68,33 +68,36 @@ templ (c SearchComponent) Action() {
 
 templ (c SearchComponent) searchOptions(chunks []document.DocumentChunk) {
 	if len(chunks) > 0 {
-		<ul
-			class="menu dropdown-content bg-base-200 w-full rounded-box shadow"
-			x-data="{ option: 0 }"
-			x-on:search-up.window="option = Math.max(option-1, 0)"
-			x-on:search-down.window="option = Math.min(option+1, htmx.findAll($el, 'li').length-1)"
-			x-on:search-submit.window="htmx.findAll($el, 'a')[option].click()"
-		>
-			for index, option := range chunks {
-				{{
+		<div class="dropdown-content bg-base-200 rounded-box shadow w-full max-h-64 overflow-y-scroll">
+			<ul
+				class="menu w-full"
+				x-data="{ option: 0 }"
+				x-on:search-up.window="option = Math.max(option-1, 0)"
+				x-on:search-down.window="option = Math.min(option+1, htmx.findAll($el, 'li').length-1)"
+				x-on:search-submit.window="htmx.findAll($el, 'a')[option].click()"
+				x-effect="htmx.findAll($el, 'a')[option].scrollIntoView({ behavior: 'smooth', block: 'nearest' })"
+			>
+				for index, option := range chunks {
+					{{
 					attrs := templ.Attributes{
 						"x-bind:class": fmt.Sprintf("option === %d && 'menu-focus'", index),
 						"x-on:click":   fmt.Sprintf("option = %d; document.activeElement.blur()", index),
 					}
-				}}
-				<li>
-					@link.New("/docs" + option.ID).WithAttrs(attrs) {
-						<div class="flex flex-col">
-							<div>
-								{ option.Name }
+					}}
+					<li>
+						@link.New("/docs" + option.ID).WithAttrs(attrs) {
+							<div class="flex flex-col">
+								<div>
+									{ option.Name }
+								</div>
+								<div class="text-xs text-current/50">
+									{ option.Document }
+								</div>
 							</div>
-							<div class="text-xs text-current/50">
-								{ option.Document }
-							</div>
-						</div>
-					}
-				</li>
-			}
-		</ul>
+						}
+					</li>
+				}
+			</ul>
+		</div>
 	}
 }
