--- a/ui/landing.templ
+++ b/ui/landing.templ
@@ -16,20 +16,22 @@ templ (c LandingPageComponent) Head() {
 templ (c LandingPageComponent) View() {
 	<div class="flex flex-col w-screen h-screen">
 		@c.Navbar
-		<div class="flex flex-col grow min-h-0 w-full">
-			<div class="flex flex-col place-items-center justify-center w-full h-full gap-12">
-				<div class="flex flex-row gap-6 place-items-center">
-					@logoIcon("size-48 fill-current")
-					<div class="flex text-9xl font-bold">
-						Gong
+		<div class="flex flex-col grow min-h-0 w-full justify-center">
+			<div class="hero">
+				<div class="hero-content flex-col text-center">
+					<div class="flex flex-row gap-6 place-items-center pb-12">
+						@logoIcon("size-48 fill-current")
+						<div class="text-9xl font-bold">
+							Gong
+						</div>
 					</div>
+					<div class="w-64 text-lg text-current/50">
+						a lightweight web framework harnessing the power of go, templ, and htmx
+					</div>
+					@link.New("/docs").WithAttrs(templ.Attributes{"class": "btn btn-neutral btn-wide"}) {
+						Get started
+					}
 				</div>
-				<div class="flex text-xl w-80 text-wrap text-current/50 place-items-center">
-					a lightweight web framework harnessing the power of go, templ, and htmx
-				</div>
-				@link.New("/docs").WithAttrs(templ.Attributes{"class": "btn btn-neutral btn-wide"}) {
-					Get started
-				}
 			</div>
 		</div>
 	</div>
