--- a/ui/landing.templ
+++ b/ui/landing.templ
@@ -28,7 +28,7 @@ templ (c LandingPageComponent) View() {
 					<div class="w-64 text-lg text-current/50">
 						a lightweight web framework harnessing the power of go, templ, and htmx
 					</div>
-					@link.New("/docs").WithAttrs(templ.Attributes{"class": "btn btn-neutral btn-wide"}) {
+					@link.New("/docs", link.WithClasses("btn btn-neutral btn-wide")) {
 						Get started
 					}
 				</div>
