--- a/ui/root.templ
+++ b/ui/root.templ
@@ -52,7 +52,7 @@ templ (view RootView) drawerContent() {
 		<div class="flex flex-col w-full h-full">
 			@view.Navbar
 			<div id="outlet-container" class="flex grow w-full max-w-full min-h-0 justify-center">
-				@outlet.New().WithAttrs(templ.Attributes{"class": "w-full h-full"})
+				@outlet.New(outlet.WithClasses("w-full h-full"))
 			</div>
 		</div>
 	</div>
