--- a/ui/root.templ
+++ b/ui/root.templ
@@ -1,9 +1,6 @@
 package ui
 
-import (
-	"github.com/troygilman/gong"
-	"github.com/troygilman/gong/outlet"
-)
+import "github.com/troygilman/gong"
 
 type RootView struct {
 	Menu   gong.Component
@@ -52,7 +49,7 @@ templ (view RootView) drawerContent() {
 		<div class="flex flex-col w-full h-full">
 			@view.Navbar
 			<div id="outlet-container" class="flex grow w-full max-w-full min-h-0 justify-center">
-				@outlet.New(outlet.WithClasses("w-full h-full"))
+				@gong.Outlet(gong.OutletWithClasses("w-full h-full"))
 			</div>
 		</div>
 	</div>
