--- a/ui/navbar.templ
+++ b/ui/navbar.templ
@@ -1,9 +1,6 @@
 package ui
 
-import (
-	"github.com/troygilman/gong"
-	"github.com/troygilman/gong/link"
-)
+import "github.com/troygilman/gong"
 
 type NavbarComponent struct {
 	SearchComponent gong.Component
@@ -18,7 +15,7 @@ templ (c NavbarComponent) View() {
 		</div>
 		<div class="flex gap-4">
 			@c.SearchComponent
-			@link.New("/docs", link.WithClasses("btn btn-icon-scale btn-ghost")) {
+			@gong.Link("/docs", gong.LinkWithClasses("btn btn-icon-scale btn-ghost")) {
 				Docs
 			}
 			@themeController()
