--- a/ui/search.templ
+++ b/ui/search.templ
@@ -2,11 +2,8 @@ package ui
 
 import (
 	"fmt"
+	"github.com/troygilman/gong"
 	"github.com/troygilman/gong-wiki/document"
-	"github.com/troygilman/gong/form"
-	"github.com/troygilman/gong/hooks"
-	"github.com/troygilman/gong/link"
-	"github.com/troygilman/gong/target"
 	"net/http"
 )
 
@@ -21,10 +18,10 @@ templ (c SearchComponent) View() {
 		x-on:keydown.prevent.down="$dispatch('search-down'); console.log('search-down')"
 		x-on:submit.prevent="$dispatch('search-submit'); console.log('search-submit')"
 	>
-		@form.New(
-			form.WithMethod(http.MethodGet),
-			form.WithTrigger("input changed delay:100ms"),
-			form.WithClasses("dropdown group"),
+		@gong.Form(
+			gong.FormWithMethod(http.MethodGet),
+			gong.FormWithTrigger("input changed delay:100ms"),
+			gong.FormWithClasses("dropdown group"),
 		) {
 			<label
 				id="search-label"
@@ -41,7 +38,7 @@ templ (c SearchComponent) View() {
 					class="w-18 lg:w-14 group-focus-within:w-48 transition-all"
 				/>
 			</label>
-			@target.New() {
+			@gong.Target() {
 				@c.searchOptions(nil)
 			}
 		}
@@ -50,7 +47,7 @@ templ (c SearchComponent) View() {
 
 templ (c SearchComponent) Action() {
 	{{
-		query := hooks.QueryParam(ctx, "q")
+		query := gong.QueryParam(ctx, "q")
 		chunks := func() []document.DocumentChunk {
 			if query == "" {
 				return nil
@@ -84,7 +81,7 @@ templ (c SearchComponent) searchOptions(chunks []document.DocumentChunk) {
 					}
 					}}
 					<li>
-						@link.New("/docs"+option.ID, link.WithAttrs(attrs)) {
+						@gong.Link("/docs"+option.ID, gong.LinkWithAttrs(attrs)) {
 							<div class="flex flex-col">
 								<div>
 									{ option.Name }
