Update RouteWithChildren to WithChildren everywhere

--- a/ui/landing.templ
+++ b/ui/landing.templ
@@ -25,7 +25,7 @@ templ (c LandingPageComponent) View() {
 					<div class="w-64 text-lg text-current/50">
 						a lightweight web framework harnessing the power of go, templ, and htmx
 					</div>
-					@gong.Link("/docs", gong.LinkWithClasses("btn btn-neutral btn-wide")) {
+					@gong.Link("/docs", gong.WithClasses("btn btn-neutral btn-wide")) {
 						Get started
 					}
 				</div>
