--- a/ui/root.templ
+++ b/ui/root.templ
@@ -49,7 +49,7 @@ templ (view RootView) drawerContent() {
 		<div class="flex flex-col w-full h-full">
 			@view.Navbar
 			<div id="outlet-container" class="flex grow w-full max-w-full min-h-0 justify-center">
-				@gong.Outlet(gong.OutletWithClasses("w-full h-full"))
+				@gong.Outlet(gong.WithClasses("w-full h-full"))
 			</div>
 		</div>
 	</div>
